# tg-adapter

./: README.md  build.sh  householder.py  householder_qr.py  hqr.py  pyproject.toml  requirements.txt  test_householder.py
src/tg_adapter/: F.py  __init__.py  __main__.py  autograd.py  backend_environment_config.py  debugging.py  device.py  dummy.py  fx.py  io.py  jit.py  lambdas.py  linalg.py  return_types.py  tensor.py  tensor_constructors.py  types.py  version.py
src/tg_adapter/distributions/: __init__.py  relaxed_bernoulli.py
src/tg_adapter/nn/: __init__.py  activations.py  attention.py  init.py  layers.py  losses.py  module.py  module_list.py  parameter.py
src/tg_adapter/safetensors/: __init__.py  file_pointer.py
src/tg_adapter/testing/: __init__.py  module_tests.py  operator_tests.py  peepee.py  testing_utils.py  testing_utils_oof.py
src/tg_adapter/tinybloat/: __init__.py  common.py  complex_tensor.py  linalg.py  nn.py  safety_functions.py
src/tg_adapter/utils/: __init__.py  _pytree.py  grad.py
src/tg_adapter/vision/: __init__.py
src/tg_adapter/vision/transforms/: __init__.py
