[build-system]
requires = [
    "hatchling >= 1.26"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "src/tiny_hf/*.so",
  "src/tiny_hf/*.dylib",
  "src/tiny_hf/*.dll",
  "src/tiny_hf/**/*.py",
  "src/tiny_hf"
]

[tool.hatch.build.targets.wheel.sources]
"src" = "."

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "tiny_hf"
requires-python = ">=3.9"
dependencies = [
	"tinygrad",
	"platformdirs",
	"numpy",
	"inspect",
	"itertools",
	"typing",
	"pickle",
	"argparse",
	"subprocess"
]
description = "Library for porting pytorch code to tinygrad"
version = "0.0.1"
