[build-system]
requires = [
    "hatchling >= 1.26"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "src/tg_adapter/*.so",
  "src/tg_adapter/*.dylib",
  "src/tg_adapter/*.dll",
  "src/tg_adapter/**/*.py",
  "src/tg_adapter"
]

[tool.hatch.build.targets.wheel.sources]
"src" = "."

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "tg_adapter"
requires-python = ">=3.9"
dependencies = [
	"tinygrad",
	"platformdirs",
	"numpy",
	"typing",
	"argparse",
	"safetensors"
]
description = "Library for porting pytorch code to tinygrad"
version = "0.0.6"
